Fix RELEASE_VERSION variable: add export and set defaults in CRD/platform cells

--- a/01-dynamo-deployment-guide.ipynb
+++ b/01-dynamo-deployment-guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "06757880",
+   "id": "10ca8935",
    "metadata": {},
    "source": [
     "# Lab 1: Introduction and Kubernetes-Based Deployment\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "69367f08",
+   "id": "ab41c939",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c65e551",
+   "id": "4a3d15ae",
    "metadata": {},
    "source": [
     "### Step 3: Verify Kubernetes Access\n"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d5dd6a2",
+   "id": "417e2f0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6006c5a4",
+   "id": "76382fa4",
    "metadata": {},
    "source": [
     "### Step 4: Set Up NGC Authentication\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c5b47b1",
+   "id": "ef1597d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c6c464e",
+   "id": "52227b37",
    "metadata": {},
    "source": [
     "#### Set HuggingFace Token\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58d274d2",
+   "id": "95bda3a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4899e60",
+   "id": "3186b81f",
    "metadata": {},
    "source": [
     "#### Login to NGC Registry"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31184cfc",
+   "id": "3d550ab3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b23615f4",
+   "id": "c40019b5",
    "metadata": {},
    "source": [
     "### Step 5: Create Your Namespace"
@@ -221,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c3e1d71",
+   "id": "c3e6f5a7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdfb828d",
+   "id": "20321360",
    "metadata": {},
    "source": [
     "### Step 6: Create NGC Pull Secret\n",
@@ -250,7 +250,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "64264a4a",
+   "id": "f653faf2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06769d93",
+   "id": "688fa3be",
    "metadata": {},
    "source": [
     "### Step 7: Create HuggingFace Token Secret"
@@ -284,7 +284,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "feb82ba3",
+   "id": "48a4144c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4e86f026",
+   "id": "ec0d74b9",
    "metadata": {},
    "source": [
     "## Section 2: Install Dynamo Platform\n",
@@ -357,13 +357,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0962a2ad",
+   "id": "26dd1e5a",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Set default RELEASE_VERSION if not already set\n",
-    "RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
+    "export RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
     "\n",
     "# Check if CRDs already exist, install if not\n",
     "if kubectl get crd dynamographdeployments.nvidia.com &>/dev/null && \\\n",
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "97140f35",
+   "id": "4b15f3ff",
    "metadata": {},
    "source": [
     "### Step 2: Install Dynamo Platform\n",
@@ -396,14 +396,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "71c7aaf9",
+   "id": "0024a456",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Set defaults if not already set\n",
-    "RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "echo \"Using configuration:\"\n",
     "echo \"  RELEASE_VERSION: $RELEASE_VERSION\"\n",
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c1651ae",
+   "id": "080ac3f9",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Platform Pods to Be Ready\n",
@@ -443,7 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ae834e3",
+   "id": "c2c2d23e",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ea69662",
+   "id": "dfc55811",
    "metadata": {},
    "source": [
     "\n",
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22cb99af",
+   "id": "384b209d",
    "metadata": {},
    "source": [
     "## Section 3: Deploy Your First Model with Disaggregated Serving\n",
@@ -567,7 +567,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "baf66623",
+   "id": "bc18fff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85b5f89c",
+   "id": "a0e0b795",
    "metadata": {},
    "source": [
     "### Step 2: Deploy the Model\n"
@@ -675,7 +675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "473375a2",
+   "id": "c51e2947",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1beebf1e",
+   "id": "962a2520",
    "metadata": {},
    "source": [
     "### Step 2b: Expose Frontend Service via NodePort\n",
@@ -705,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5148e6a6",
+   "id": "fdf4d5dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7a391f2f",
+   "id": "46cf435b",
    "metadata": {},
    "source": [
     "### Step 3: Monitor Deployment Progress\n"
@@ -750,7 +750,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "749a62db",
+   "id": "1906fe11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -806,7 +806,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e7b29a8",
+   "id": "739ecabd",
    "metadata": {},
    "source": [
     "### Step 4: View Worker Logs (Optional)\n",
@@ -819,7 +819,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c04509b8",
+   "id": "3b2e4c5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6444e894",
+   "id": "9f248a62",
    "metadata": {},
    "source": [
     "## Section 4: Testing and Validation\n",
@@ -881,7 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d86bc8e3",
+   "id": "0ecdcb9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "167130af",
+   "id": "b023463f",
    "metadata": {},
    "source": [
     "### Step 2: Test the `/v1/models` Endpoint\n"
@@ -907,7 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0461fa9a",
+   "id": "20de2b7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22b89e78",
+   "id": "692f05f9",
    "metadata": {},
    "source": [
     "### Step 3: Simple Non-Streaming Chat Completion\n"
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb10c2c",
+   "id": "473c6313",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8468b5e",
+   "id": "2fe1bb45",
    "metadata": {},
    "source": [
     "### Step 4: Test Streaming Response\n"
@@ -960,7 +960,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1fde5f6",
+   "id": "5a2ff668",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +981,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c6229a6",
+   "id": "b4aec6ad",
    "metadata": {},
    "source": [
     "### Step 5: Test with Different Parameters\n"
@@ -990,7 +990,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8d5979a",
+   "id": "ce170bef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01443a9d",
+   "id": "ef84282f",
    "metadata": {},
    "source": [
     "## Section 5: Benchmarking with AI-Perf\n",
@@ -1042,7 +1042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "459d63ce",
+   "id": "d58e46f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f902a96a",
+   "id": "ac179a44",
    "metadata": {},
    "source": [
     "### Step 2: Run Baseline Benchmark (Low Concurrency)\n",
@@ -1133,7 +1133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a37da319",
+   "id": "b6fc5cfa",
    "metadata": {},
    "source": [
     "---\n",
@@ -1151,7 +1151,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "693bf829",
+   "id": "b51fe061",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfbc592a",
+   "id": "4a180c70",
    "metadata": {},
    "source": [
     "### View Pod Logs\n"
@@ -1177,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dc0a5b0",
+   "id": "2d00ee3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7265277f",
+   "id": "e43d4cf4",
    "metadata": {},
    "source": [
     "### Check Deployment Status\n"
@@ -1204,7 +1204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1055e954",
+   "id": "4cbd3bae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1222,7 +1222,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cde037f",
+   "id": "175ceacf",
    "metadata": {},
    "source": [
     "### Check Recent Events\n"
@@ -1231,7 +1231,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc4d10e4",
+   "id": "02ced7fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1244,7 +1244,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "86b4ec48",
+   "id": "de5098d3",
    "metadata": {},
    "source": [
     "### Common Issues\n",
@@ -1310,7 +1310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2156b50b",
+   "id": "2b131394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e89acf3b",
+   "id": "f37cbdc9",
    "metadata": {},
    "source": [
     "### A0. Troubleshooting Pod Issues\n",
@@ -1331,7 +1331,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "af86ccb3",
+   "id": "b6b431c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1378,7 +1378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d198722a",
+   "id": "fc03e100",
    "metadata": {},
    "source": [
     "### A1. Environment Setup\n"
@@ -1387,7 +1387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9528f333",
+   "id": "750b3d06",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1414,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cfd77e40",
+   "id": "e083fda4",
    "metadata": {},
    "source": [
     "### A2. Install Dynamo Platform (Namespace-Scoped)\n"
@@ -1423,7 +1423,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41931f9f",
+   "id": "b67156bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "332fee81",
+   "id": "b89990fd",
    "metadata": {},
    "source": [
     "### A3. Deploy Your First Model\n",
@@ -1566,7 +1566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad9c4826",
+   "id": "d599f6ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1591,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a358e16e",
+   "id": "e6f856ab",
    "metadata": {},
    "source": [
     "### A4. Test the Deployment\n"
@@ -1600,7 +1600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "273c7d2f",
+   "id": "3c173d12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1622,7 +1622,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0734cbdc",
+   "id": "2041f8e1",
    "metadata": {},
    "source": [
     "### A5. Benchmark with AI-Perf\n"
@@ -1631,7 +1631,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80dc757a",
+   "id": "f2cb025f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1666,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0f3419e",
+   "id": "674a120c",
    "metadata": {},
    "source": [
     "### A6. Scale Your Deployment\n"
@@ -1675,7 +1675,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7da35ca",
+   "id": "600cdb3d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1694,7 +1694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fbf685b",
+   "id": "17700375",
    "metadata": {},
    "source": [
     "### A7. Cleanup (⚠️ ONLY AFTER COMPLETING ALL LABS)\n",
@@ -1712,7 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bfef2ab",
+   "id": "91caa01e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1734,7 +1734,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c4a3b51",
+   "id": "9c0e5c8b",
    "metadata": {},
    "source": [
     "### A8. Troubleshooting\n"
@@ -1743,7 +1743,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39bf53ee",
+   "id": "abb4c9a6",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7576dad0",
+   "id": "811e6bc0",
    "metadata": {},
    "source": [
     "\n"
@@ -1784,9 +1784,6 @@
    "formats": "ipynb,md",
    "main_language": "python",
    "notebook_metadata_filter": "jupytext,-kernelspec,-widgets,-language_info"
-  },
-  "language_info": {
-   "name": "python"
   }
  },
  "nbformat": 4,
