Fix all bash cells to export environment variables
- Add export to RELEASE_VERSION, NAMESPACE, and CACHE_PATH in all cells
- Fix disagg_router.yaml creation cell to set variables before heredoc
- Ensures variables are available to subprocesses (helm, kubectl, etc)
- Add comprehensive .cursorrules documentation for project patterns

--- a/01-dynamo-deployment-guide.ipynb
+++ b/01-dynamo-deployment-guide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "10ca8935",
+   "id": "c6a4b4d4",
    "metadata": {},
    "source": [
     "# Lab 1: Introduction and Kubernetes-Based Deployment\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ab41c939",
+   "id": "63323ada",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a3d15ae",
+   "id": "b98ef48e",
    "metadata": {},
    "source": [
     "### Step 3: Verify Kubernetes Access\n"
@@ -88,7 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "417e2f0a",
+   "id": "caaafb86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76382fa4",
+   "id": "865a92eb",
    "metadata": {},
    "source": [
     "### Step 4: Set Up NGC Authentication\n",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ef1597d8",
+   "id": "98792b3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52227b37",
+   "id": "ff14176b",
    "metadata": {},
    "source": [
     "#### Set HuggingFace Token\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "95bda3a5",
+   "id": "89bd58da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3186b81f",
+   "id": "7e01bd3d",
    "metadata": {},
    "source": [
     "#### Login to NGC Registry"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d550ab3",
+   "id": "193afdf7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c40019b5",
+   "id": "74971aab",
    "metadata": {},
    "source": [
     "### Step 5: Create Your Namespace"
@@ -221,13 +221,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3e6f5a7",
+   "id": "80e8ed46",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Create the namespace\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "kubectl create namespace $NAMESPACE 2>&1 | grep -v \"AlreadyExists\" || true\n",
     "\n",
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20321360",
+   "id": "4df9cb1b",
    "metadata": {},
    "source": [
     "### Step 6: Create NGC Pull Secret\n",
@@ -250,13 +250,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f653faf2",
+   "id": "1fdd4121",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Get variables\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "# Create NGC image pull secret\n",
     "kubectl create secret docker-registry ngc-secret \\\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "688fa3be",
+   "id": "66370fac",
    "metadata": {},
    "source": [
     "### Step 7: Create HuggingFace Token Secret"
@@ -284,13 +284,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48a4144c",
+   "id": "36284a59",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Get variables\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "# Create HuggingFace token secret\n",
     "kubectl create secret generic hf-token-secret \\\n",
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec0d74b9",
+   "id": "a0671081",
    "metadata": {},
    "source": [
     "## Section 2: Install Dynamo Platform\n",
@@ -357,7 +357,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26dd1e5a",
+   "id": "c345d6ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b15f3ff",
+   "id": "f2d942b4",
    "metadata": {},
    "source": [
     "### Step 2: Install Dynamo Platform\n",
@@ -396,7 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0024a456",
+   "id": "f3de9151",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "080ac3f9",
+   "id": "e27f406c",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Platform Pods to Be Ready\n",
@@ -443,14 +443,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2c2d23e",
+   "id": "991047c3",
    "metadata": {
     "lines_to_next_cell": 0
    },
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "echo \"Waiting for platform pods to be ready...\"\n",
     "echo \"\"\n",
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dfc55811",
+   "id": "3400d31d",
    "metadata": {},
    "source": [
     "\n",
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "384b209d",
+   "id": "dcb5aee8",
    "metadata": {},
    "source": [
     "## Section 3: Deploy Your First Model with Disaggregated Serving\n",
@@ -567,11 +567,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc18fff9",
+   "id": "367c1152",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
+    "# Set defaults if not already set\n",
+    "export RELEASE_VERSION=${RELEASE_VERSION:-0.8.0}\n",
+    "export CACHE_PATH=${CACHE_PATH:-/data/huggingface-cache}\n",
+    "\n",
     "# Create the deployment YAML with environment variables\n",
     "cat <<EOF > disagg_router.yaml\n",
     "apiVersion: nvidia.com/v1alpha1\n",
@@ -666,7 +670,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0e0b795",
+   "id": "b5b3c9cf",
    "metadata": {},
    "source": [
     "### Step 2: Deploy the Model\n"
@@ -675,12 +679,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c51e2947",
+   "id": "a0a0b483",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "# Set defaults if not already set\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "# Apply the deployment\n",
     "kubectl apply -f disagg_router.yaml --namespace $NAMESPACE\n",
@@ -694,7 +699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "962a2520",
+   "id": "da1adc88",
    "metadata": {},
    "source": [
     "### Step 2b: Expose Frontend Service via NodePort\n",
@@ -705,12 +710,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdf4d5dd",
+   "id": "7942b440",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "# Create NodePort service to expose the frontend\n",
     "cat <<EOF | kubectl apply -f -\n",
@@ -741,7 +746,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "46cf435b",
+   "id": "3d3d881b",
    "metadata": {},
    "source": [
     "### Step 3: Monitor Deployment Progress\n"
@@ -750,12 +755,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1906fe11",
+   "id": "c19d66d5",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "echo \"Expected pods:\"\n",
     "echo \"  - vllm-disagg-router-frontend-xxxxx     (Frontend)\"\n",
@@ -806,7 +811,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "739ecabd",
+   "id": "156e6c30",
    "metadata": {},
    "source": [
     "### Step 4: View Worker Logs (Optional)\n",
@@ -819,12 +824,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b2e4c5a",
+   "id": "44bd65c8",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "# Get logs from worker pods\n",
     "PREFILL_POD=$(kubectl get pods -n $NAMESPACE | grep vllmprefillworker | awk '{print $1}' | head -1)\n",
@@ -856,7 +861,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f248a62",
+   "id": "476c96f3",
    "metadata": {},
    "source": [
     "## Section 4: Testing and Validation\n",
@@ -881,7 +886,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ecdcb9a",
+   "id": "fd5ae3dd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -898,7 +903,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b023463f",
+   "id": "1f2292c1",
    "metadata": {},
    "source": [
     "### Step 2: Test the `/v1/models` Endpoint\n"
@@ -907,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20de2b7b",
+   "id": "b14ce452",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +926,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "692f05f9",
+   "id": "d32190f1",
    "metadata": {},
    "source": [
     "### Step 3: Simple Non-Streaming Chat Completion\n"
@@ -930,7 +935,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "473c6313",
+   "id": "7d365c9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -951,7 +956,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fe1bb45",
+   "id": "e11a4d97",
    "metadata": {},
    "source": [
     "### Step 4: Test Streaming Response\n"
@@ -960,7 +965,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a2ff668",
+   "id": "4c290ee6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +986,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4aec6ad",
+   "id": "3cf6e421",
    "metadata": {},
    "source": [
     "### Step 5: Test with Different Parameters\n"
@@ -990,7 +995,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ce170bef",
+   "id": "44adf366",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef84282f",
+   "id": "8d3abfc9",
    "metadata": {},
    "source": [
     "## Section 5: Benchmarking with AI-Perf\n",
@@ -1042,7 +1047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d58e46f0",
+   "id": "4403f2a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1070,7 +1075,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ac179a44",
+   "id": "329430fa",
    "metadata": {},
    "source": [
     "### Step 2: Run Baseline Benchmark (Low Concurrency)\n",
@@ -1133,7 +1138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6fc5cfa",
+   "id": "d6e367a7",
    "metadata": {},
    "source": [
     "---\n",
@@ -1151,12 +1156,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b51fe061",
+   "id": "ce3cff92",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "# Check all pods in your namespace\n",
     "kubectl get pods -n $NAMESPACE\n",
@@ -1168,7 +1173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4a180c70",
+   "id": "8ca7219e",
    "metadata": {},
    "source": [
     "### View Pod Logs\n"
@@ -1177,12 +1182,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d00ee3d",
+   "id": "7bb31c26",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "# View logs from a specific component\n",
     "echo \"Frontend logs:\"\n",
@@ -1195,7 +1200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e43d4cf4",
+   "id": "23565898",
    "metadata": {},
    "source": [
     "### Check Deployment Status\n"
@@ -1204,12 +1209,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4cbd3bae",
+   "id": "715ee681",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "# Check DynamoGraphDeployment status\n",
     "echo \"DynamoGraphDeployment status:\"\n",
@@ -1222,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "175ceacf",
+   "id": "65904199",
    "metadata": {},
    "source": [
     "### Check Recent Events\n"
@@ -1231,12 +1236,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02ced7fa",
+   "id": "c2c3eb18",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "# View recent events in your namespace\n",
     "kubectl get events -n $NAMESPACE --sort-by=.lastTimestamp | tail -20"
@@ -1244,7 +1249,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de5098d3",
+   "id": "a8381c08",
    "metadata": {},
    "source": [
     "### Common Issues\n",
@@ -1310,7 +1315,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b131394",
+   "id": "b05b075b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1320,7 +1325,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f37cbdc9",
+   "id": "105497e7",
    "metadata": {},
    "source": [
     "### A0. Troubleshooting Pod Issues\n",
@@ -1331,12 +1336,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b6b431c6",
+   "id": "4e4fe815",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "\n",
     "echo \"=== Pod Status ===\"\n",
     "kubectl get pods -n $NAMESPACE | grep vllm\n",
@@ -1378,7 +1383,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc03e100",
+   "id": "8b020457",
    "metadata": {},
    "source": [
     "### A1. Environment Setup\n"
@@ -1387,7 +1392,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "750b3d06",
+   "id": "28f17357",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1419,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e083fda4",
+   "id": "e5b5a598",
    "metadata": {},
    "source": [
     "### A2. Install Dynamo Platform (Namespace-Scoped)\n"
@@ -1423,7 +1428,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b67156bd",
+   "id": "0f7ea828",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1469,7 +1474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89990fd",
+   "id": "811ac0a2",
    "metadata": {},
    "source": [
     "### A3. Deploy Your First Model\n",
@@ -1566,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d599f6ec",
+   "id": "7a3cee59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1591,7 +1596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6f856ab",
+   "id": "4cd13401",
    "metadata": {},
    "source": [
     "### A4. Test the Deployment\n"
@@ -1600,7 +1605,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c173d12",
+   "id": "50cd4d07",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1622,7 +1627,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2041f8e1",
+   "id": "fa4aca9d",
    "metadata": {},
    "source": [
     "### A5. Benchmark with AI-Perf\n"
@@ -1631,7 +1636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2cb025f",
+   "id": "514f634c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1666,7 +1671,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "674a120c",
+   "id": "e5e12df5",
    "metadata": {},
    "source": [
     "### A6. Scale Your Deployment\n"
@@ -1675,7 +1680,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "600cdb3d",
+   "id": "7627bbae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1694,7 +1699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17700375",
+   "id": "411dce9d",
    "metadata": {},
    "source": [
     "### A7. Cleanup (⚠️ ONLY AFTER COMPLETING ALL LABS)\n",
@@ -1712,13 +1717,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91caa01e",
+   "id": "f5e0ecfd",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "# Step 1: Delete the Lab 1 deployment (only after Lab 2 is done)\n",
-    "NAMESPACE=${NAMESPACE:-dynamo}\n",
+    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
     "kubectl delete dynamographdeployment vllm-disagg-router -n ${NAMESPACE}\n",
     "kubectl delete svc vllm-frontend-nodeport -n ${NAMESPACE}\n",
     "\n",
@@ -1734,7 +1739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c0e5c8b",
+   "id": "a870718d",
    "metadata": {},
    "source": [
     "### A8. Troubleshooting\n"
@@ -1743,7 +1748,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abb4c9a6",
+   "id": "e92ddb68",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -1771,7 +1776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "811e6bc0",
+   "id": "25e22406",
    "metadata": {},
    "source": [
     "\n"
